fix: responsive text on tablet

--- a/style.sass
+++ b/style.sass
@@ -110,4 +110,10 @@ header.masthead
 
 .more-review-btn
   margin-left: auto
+
+  @media (max-width: 990px) and (min-width: 737px)
+  .page-section-container
+    margin: auto
+    width: 100%
+    padding: 10px
   
